# amxmodx

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  AMBuildScript  AmxModXBridge.cpp  AmxModXBridge.csproj  AmxModXBridge.h  AmxModXExample.cs  AmxModXInterop.cs  AmxModX_CSharp_Bridge_README.md  CMakeLists.txt  GHW_Revive.txt  README.md  admin.txt  adminchat.txt  admincmd.txt  adminhelp.txt  adminslots.txt  adminvote.txt  antiflood.txt  appveyor.yml  atac3.txt  atac_punishments.txt  cmdmenu.txt  common.txt  configure.py  connect.txt  hostage_down.txt  imessage.txt  languages.txt  mac_support.patch  mapchooser.txt  mapsmenu.txt  menufront.txt  miscstats2.txt  modules.versions  multilingual.txt  nanosuit.txt  nextmap.txt  (+18 more)
.github/: CONTRIBUTING.md  FUNDING.yml  ISSUE_TEMPLATE.md
.github/workflows/: build.yml  c-cpp.yml  ci.yml  codeql.yml  labeler.yml  new_build.yml
amxmodx/: AMBuilder  CCmd.cpp  CCmd.h  CDataPack.cpp  CDataPack.h  CEvent.cpp  CEvent.h  CFile.cpp  CFile.h  CFileSystem.h  CFlagManager.cpp  CFlagManager.h  CForward.cpp  CForward.h  CFrameAction.h  CGameConfigs.cpp  CGameConfigs.h  CLang.cpp  CLang.h  CLibrarySys.cpp  CLibrarySys.h  CList.h  CLogEvent.cpp  CLogEvent.h  CMenu.cpp  CMenu.h  CMisc.cpp  CMisc.h  CModule.cpp  CModule.h  CPlugin.cpp  CPlugin.h  CQueue.h  CStack.h  CString.cpp  CString.h  CTask.cpp  CTask.h  CTextParsers.cpp  CTextParsers.h  (+107 more)
amxmodx/JIT/: jits.asm  jits.def  jits.exp  jits.lib
amxmodx/csharp/: AmxModX.CSharp.csproj  AmxModXExample.cs  AmxModXInterop.cs  AmxModXTestApp.csproj  CommandExecutionExample.cs  EventSystemExample.cs  IMPLEMENTATION_SUMMARY.md  PlayerManagementExample.cs  README.md  TestProgram.cs  build.bat  build.sh
amxmodx/mmgr/: mmgr.cpp  mmgr.h
amxmodx/msvc/: .cvsignore  amxmod_mm.def  amxmod_mm.dsp  amxmod_mm.dsw  amxmod_mm.vcproj  amxmodx.vcproj  amxmodx_mm 7.1.vcproj  amxmodx_mm.def  amxmodx_mm.dsp  amxmodx_mm.dsw  amxmodx_mm.sln  amxmodx_mm.vcproj
amxmodx/msvc10/: amxmodx_mm.sln  amxmodx_mm.vcxproj  amxmodx_mm.vcxproj.filters
amxmodx/msvc12/: amxmodx_mm.sln  amxmodx_mm.vcxproj  amxmodx_mm.vcxproj.filters
amxmodx/msvc15/: amxmodx_mm.sln  amxmodx_mm.vcxproj  amxmodx_mm.vcxproj.filters
amxmodx/msvc7/: amxmodx_mm.vcproj
amxmodx/msvc8/: amxmodx_mm.sln  amxmodx_mm.vcproj
amxmodx/sdk/: amxxmodule.cpp  amxxmodule.h  howto.txt  moduleconfig.h
amxmodx/zlib/: zconf.h  zlib.lib
compiler/amxxpc/: AMBuilder  Binary.cpp  Binary.h  Makefile  amx.cpp  amx.h  amxdbg.h  amxxpc.cpp  amxxpc.h  amxxpc.sln  amxxpc.vcproj  amxxpc.vcxproj  amxxpc.vcxproj.filters  amxxpc1.rc  resource.h  resource1.h  sclinux.h  zconf.h  zlib.lib
compiler/compile/: compile.bdsproj  compile.cfg  compile.dof  compile.dpr  icon.rc  icon.res  uFunc.pas  version.rc
compiler/libpc300/: AMBuilder  CMakeLists.txt  Makefile  amx.h  amxdbg.h  dllmain.c  libpawnc.c  libpawnc.def  libpawnc.lbc  libpawnc.rc  libpc300.sln  libpc300.vcproj  libpc300.vcxproj  libpc300.vcxproj.filters  memfile.c  memfile.h  osdefs.h  pawncc.c  prefix.c  prefix.h  sc.h  sc1.c  sc2.c  sc3.c  sc4.c  sc5-in.scp  sc5.c  sc5.scp  sc6.c  sc7-in.scp  sc7.c  sc7.scp  sci18n.c  sclist.c  scmemfil.c  scpack.c  scstate.c  scvars.c  sp_symhash.c
compiler/scasm/: Makefile  Makefile.pl  adminslots.asm  amx.h  amx_compiler.cpp  amx_compiler.h  amx_data.cpp  amx_data.h  amx_define.cpp  amx_define.h  amx_error.cpp  amx_error.h  amx_label.cpp  amx_label.h  amx_macro.cpp  amx_macro.h  amx_nametable.h  amx_natives.cpp  amx_natives.h  amx_parser.cpp  amx_parser.h  amx_proc.cpp  amx_proc.h  amx_symbol.cpp  amx_symbol.h  amxasm.cpp  amxasm.h  asm_macro.h  assembler.sln  assembler.vcproj  assembler.vcxproj  assembler.vcxproj.filters  cexpr.cpp  cexpr.h  plugin.asm  sasm
configs/: amx.cfg  amxx.cfg  clcmds.ini  cmds.ini  configs.ini  conmotd.txt  core.ini  custommenuitems.cfg  cvars.ini  hamdata.ini  maps.ini  miscstats.ini  modules.ini  mysql.cfg  plugins.ini  speech.ini  sql.cfg  users.ini
configs/cstrike/: amxx.cfg  cmds.ini  core.ini  cvars.ini  maps.ini  modules.ini  plugins.ini  stats.ini
configs/dod/: core.ini  cvars.ini  maps.ini  modules.ini  plugins.ini
configs/esf/: modules.ini  plugins.ini
configs/ns/: amxx.cfg  clcmds.ini  cmds.ini  maps.ini  modules.ini  plugins.ini  speech.ini  users.ini
configs/tfc/: core.ini  cvars.ini  maps.ini  modules.ini  plugins.ini
configs/ts/: core.ini  maps.ini  modules.ini  plugins.ini
dlls/BB/: amxxmodule.cpp  amxxmodule.h  bb.cpp  bb.h  bb.inc  bb.ncb  bb.sln  bb.vcproj  bb_const.h  bb_const.inc  bb_stocks.inc  moduleconfig.h  pdata.h
dlls/arrayx/Judy-1.0.1/src/Judy1/: Judy1.h  Judy1ByCount.c  Judy1Cascade.c  Judy1Prev.c  Judy1PrevEmpty.c  Judy1Set.c  Judy1Tables.c  Makefile.am  Makefile.in  README
dlls/arrayx/Judy-1.0.1/src/JudyL/: JudyL.h  JudyLDecascade.c  JudyLDel.c  JudyLInsertBranch.c  JudyLMemActive.c  JudyLTables.c  JudyLTablesGen.c  Makefile.am  Makefile.in  README  j__udyLGet.c
dlls/fun/: fun.h  (+14 more)
dlls/geoip/geolib/libGeoIP/: GeoIP.h  GeoIPBitReader.c  GeoIPBitReader.h  GeoIPCity.c  GeoIPCity.h  GeoIPUpdate.c  GeoIPUpdate.h  Geolib.dev  Geolib.layout  Makefile.am  Makefile.in  Makefile.win  libGeolib.def  md5.c
installer/: amxmodx-installer.nsi
plugins/: AMBuilder  admin.sma  admin_mysql.sma  admin_sql.sma  adminchat.sma  admincmd.sma  adminhelp.sma  adminslots.sma  adminvote.sma  amxxpc  amxxpc32.dylib  amxxpc_osx  amxxsc  antiflood.sma  cmdmenu.sma  compile.bat  compile.sh  csstats.sma  dlsym  dlsym.c  dlsym64  imessage.sma  logger.sma  mapchooser.sma  mapsmenu.sma  menufront.sma  miscstats.sma  multilingual.sma  nextmap.sma  pausecfg.sma  plmenu.sma  pluginmenu.sma  ppause.sma  restmenu.sma  sasm  sc  scrollmsg.sma  stats.sma  stats_logging.sma  statscfg.sma  (+7 more)
public/: HLTypeConversion.h  IGameConfigs.h  ITextParsers.h  InterfaceSys.h  amxmodx_version.h  auto-string.h  engine_strucs.h  interface_helpers.h  platform_helpers.h  sdk_util.h  sh_list.h  sh_stack.h  sh_string.h  sm_namehashset.h  sm_queue.h  sm_stringhashmap.h  sm_symtable.h
support/: PackageScript  Versioning  checkout-deps.sh  generate_headers.py
(+3155 files in other folders)
